--- a/fake_news_detector.ipynb
+++ b/fake_news_detector.ipynb
@@ -768,7 +768,7 @@
    ],
    "source": [
     "# Test with Custom Input\n",
-    "sample_text = [\"Indian Cricket team won the 2024 T20 World Cup\"]\n",
+    "sample_text = [\"Indian Cricket team lost the 2024 T20 World Cup\"]\n",
     "sample_vec = vectorizer.transform(sample_text)\n",
     "prediction = model.predict(sample_vec)\n",
     "\n",
